# dynamorio-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yml  linux.yml  windows.yml
drstd/: Cargo.toml  README.md
drstd/src/: allocator.rs  error.rs  io.rs  lib.rs  panic_handler.rs  path.rs  thread.rs
drstd/src/fs/: file.rs  mod.rs
drstd/src/sync/: mod.rs  mutex.rs  rwlock.rs
dynamorio-rs/: Cargo.toml
dynamorio-rs/src/: allocator.rs  closure.rs  context.rs  event.rs  extension.rs  instruction.rs  instruction_list.rs  io.rs  lib.rs  manager.rs  mcontext.rs  mgr.rs  module.rs  operand.rs  symbols.rs  syms.rs  syscall.rs  wrap.rs
dynamorio-rs/src/arch/: x86_64.rs
dynamorio-rs/src/manager/: basic_block.rs  mod.rs  module.rs  syscall.rs  thread.rs
examples/empty/: Cargo.toml
examples/empty/src/: lib.rs
examples/strace/: Cargo.toml
examples/strace/src/: lib.rs
