[package]
name = "drstd"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic.workspace = true
acid_io = { version = "0.1", features = ["alloc"] }
dynamorio-sys.workspace = true
libc = { version = "0.2", default-features = false }
spin = { version = "0.9", features = ["barrier", "once"] }
unix_path = { version = "1", default-features = false, features = ["alloc"] }
