[package]
name = "drstd"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic.workspace = true
no_std_io = { version = "0.6", default-features = false, features = ["alloc"], optional = true }
dynamorio-sys.workspace = true
libc = { version = "0.2", default-features = false }
spin = { version = "0.9", features = ["barrier", "once"] }
unix_path = { version = "1", default-features = false, features = ["alloc"] }

[features]
default = ["panic_handler"]
io = ["no_std_io"]
panic_handler = []
