[package]
name = "dynamorio-rs"
version = "0.1.0"
edition = "2021"

[features]
all = ["mgr", "syms", "x"]
mgr = ["dynamorio-sys/mgr"]
syms = ["dynamorio-sys/syms"]
x = ["dynamorio-sys/x"]
wrap = ["dynamorio-sys/wrap"]

[dependencies]
atomic = "0.5"
cstr_core = "0.2"
drstd = { git = "https://github.com/StephanvanSchaik/dynamorio-rs" }
dynamorio-sys = { git = "https://github.com/elast0ny/dynamorio-sys" }
libffi = "2"
