[package]
name = "dynamorio-rs"
version = "0.1.0"
edition = "2021"

[features]
all = ["mgr", "syms", "x"]
mgr = ["dynamorio-sys/mgr"]
syms = ["dynamorio-sys/syms"]
x = ["dynamorio-sys/x"]
wrap = ["dynamorio-sys/wrap"]

[dependencies]
atomic.workspace = true
drstd = { version = "0.1", path = "../drstd" }
dynamorio-sys.workspace = true
paste = "1"
