[package]
name = "empty"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cdylib-link-lines = "0.1"

[dependencies]
drstd = { git = "https://github.com/StephanvanSchaik/dynamorio-rs" }
dynamorio-rs = { git = "https://github.com/StephanvanSchaik/dynamorio-rs" }
dynamorio-sys = { git = "https://github.com/StephanvanSchaik/dynamorio-sys" }
