[package]
name = "strace"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cdylib-link-lines = "0.1"

[dependencies]
drstd = { git = "https://github.com/StephanvanSchaik/dynamorio-rs" }
dynamorio-rs = { git = "https://github.com/StephanvanSchaik/dynamorio-rs", features = ["mgr"] }
dynamorio-sys = { git = "https://github.com/elast0ny/dynamorio-sys", features = ["mgr"] }
syscalls = { git = "https://github.com/StephanvanSchaik/syscalls", default-features = false }
